style: fix coding styles